src/main/java/syntactic/test/failing/structLowercase.ru
struct hola {}

/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 1 | 8 | Se esperaba [ID_CLASS] pero se encontró ID: hola |